--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -3,10 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="rock-paper-scissors.js"></script>
+    <script src="rock-paper-scissors.js" defer></script>
     <title>Document</title>
+    <style>
+        .buttons{
+            border:1px dotted black;
+            background-color:yellow;
+            display:flex;
+            justify-content:center;
+        }
+    </style>
 </head>
 <body>
-    
+    <div class="buttons">
+        <button class = "button" id="A">Rock</button>
+        <button class = "button">Paper</button>
+        <button class = "button">Scissors</button>
+    </div>
+    <div id="resultOfRound"></div>
+    <div id="overallResult"></div>
 </body>
 </html>
